# NEST_SDK

./: .env.example  ACHIEVEMENTS_TODAY.md  CLI_FEATURES_SUMMARY.md  COLORFUL_CLI_DEMO.md  GETTING_STARTED_FOR_CONTRIBUTORS.md  PROGRESS.md  QUICKSTART.md  README_SDK.md  SDK_DEVELOPMENT_PLAN.md  TECHNICAL_SPECS.md  USE_CASES.md  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: a2a_communication.py  from_template.py  quick_start.py
nest/: __init__.py  agent.py  client.py  config.py  exceptions.py
nest/cli/: __init__.py  main.py  utils.py
nest/cli/commands/: __init__.py  create.py  deploy.py  dev.py  monitor.py
nest/deployment/: __init__.py  local.py
nest/templates/: __init__.py
nest/templates/data/: code-reviewer.yaml  customer-support.yaml  data-analyst.yaml
